feat: add new endpoints for update profile and update password user
