# src/controllers/auth.controller.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from "express"
 import * as Yup from 'yup'
 
-import UserModel from "../models/user.model"
+import UserModel, { userDTO, userLoginDTO, userUpdatePasswordDTO } from "../models/user.model"
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../utils/interfaces";
@@ -21,32 +21,21 @@ type TLogin = {
      password: string
 }
 
-const registerValidateSchema = Yup.object({
-     fullName : Yup.string().required(),
-     username : Yup.string().required(),
-     email    : Yup.string().email().required(),
-     password : Yup.string()
-               .required().min(6, 'Password must be at least 6 characters')
-               .test(
-                    "at-least-one-uppercase-letter",
-                    "Contains at least one uppercase letter",
-                    (value) => {
-                         if (!value) return false;
-                         const regex = /^(?=.*[A-Z])/;
-                         return regex.test(value);
-                    }
-               ),
-     confirmPassword : Yup.string()
-                    .required("Please input your password confirmation")
-                    .oneOf([Yup.ref("password"), ""], "Password confirmation does not match"),
-})
+// const registerValidateSchema = Yup.object({
+//      fullName : Yup.string().required(),
+//      username : Yup.string().required(),
+//      email    : Yup.string().email().required(),
+//      password :  ,
+//      confirmPassword : ,
+// })
 
 export default {
      async register(req: Request, res: Response) {
-          const { fullName, username, email, password, confirmPassword } = req.body as unknown as TRegister
+          const { fullName, username, email, password, confirmPassword } = req.body
 
           try {
-               await registerValidateSchema.validate({
+               // await registerValidateSchema.validate({
+               await userDTO.validate({
                     fullName,
                     username,
                     email,
@@ -79,8 +68,14 @@ export default {
      },
 
      async login(req: Request, res: Response) {
-          const {identifier, password} = req.body as unknown as TLogin
+          const {identifier, password} = req.body
           try {
+
+               await userLoginDTO.validate({
+                    identifier,
+                    password
+               })
+
                // Ambil data user berdasarkan "identifier" -> email dan username (jadi akibatnya bisa menuliskan email atau usernamenya)
                const userByIdentifier = await UserModel.findOne({
                     $or: [ //validasi untuk dua data
@@ -149,6 +144,54 @@ export default {
           } catch (error){
                const err = error as unknown as Error
                response.error(res, error, err.message)
+          }
+     },
+
+     async updateProfile(req: IReqUser, res: Response){
+          try {
+               const userId = req.user?.id
+
+               const { fullName, profilePicture } = req.body
+
+               const result = await UserModel.findByIdAndUpdate(userId, {
+                    fullName,
+                    profilePicture
+               }, { new: true })
+
+               if(!result) return response.notFound(res, 'User not found')
+
+               response.success(res, result, "Success update a profile")
+          } catch (error){
+               response.error(res, error, 'failed to update profile')
+          }
+     },
+
+     async updatePassword(req: IReqUser, res: Response){
+          try {
+               const userId = req.user?.id
+
+               const { oldPassword, password, confirmPassword } = req.body
+
+               await userUpdatePasswordDTO.validate({
+                    oldPassword,
+                    password,
+                    confirmPassword
+               })
+
+               const user = await UserModel.findById(userId)
+
+               if(!user) return response.notFound(res, 'User not found')
+
+               if(!user || user.password !== encrypt(oldPassword)) return response.notFound(res, 'User not found')
+
+               const result = await UserModel.findByIdAndUpdate(userId, {
+                    password: encrypt(password)
+               }, { new: true })
+
+               response.success(res, result, "Success update password")
+
+          } catch (error) {
+               response.error(res, error, 'failed to update password')
           }
      }
 }
