# src/models/user.model.ts
@@ -4,7 +4,53 @@ import { encrypt } from "../utils/encryption";
 import {renderMailHTML, sendMail} from '../utils/mail/mail'
 import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 import { ROLES } from "../utils/constant";
-import { User } from "../utils/interfaces";
+// import { User } from "../utils/interfaces";
+
+import * as Yup from "yup"
+
+const validatePassword = Yup.string()
+                         .required().min(6, 'Password must be at least 6 characters')
+                         .test(
+                              "at-least-one-uppercase-letter",
+                              "Contains at least one uppercase letter",
+                              (value) => {
+                                   if (!value) return false;
+                                   const regex = /^(?=.*[A-Z])/;
+                                   return regex.test(value);
+                              }
+                         )
+const validateConfirmPassword = Yup.string()
+                                   .required("Please input your password confirmation")
+                                   .oneOf([Yup.ref("password"), ""], "Password confirmation does not match")
+
+export const userLoginDTO = Yup.object({
+     identifier: Yup.string().required(),
+     password: validatePassword
+})
+
+export const userUpdatePasswordDTO = Yup.object({
+     oldPassword: validatePassword,
+     password: validatePassword,
+     confirmPassword: validateConfirmPassword
+})
+
+export const userDTO = Yup.object({
+     fullName: Yup.string().required(),
+     username: Yup.string().required(),
+     email: Yup.string().required(),
+     password: validatePassword,
+     confirmPassword: validateConfirmPassword,
+})
+
+export type TypeUser = Yup.InferType<typeof userDTO>
+
+export interface User extends Omit<TypeUser, "confirmPassword">{
+     isActive: boolean;
+     activationCode: string;
+     role: string;
+     profilePicture: string;
+     createdAt?: string;
+}
 
 const Schema = mongoose.Schema
 
