# src/routes/api.ts
@@ -49,6 +49,30 @@ router.post("/auth/activation", authController.activation,
           }
      */
 )
+router.put("/auth/update-profile", [authMiddleware, aclMiddleware([ROLES.MEMBER])], authController.updateProfile,
+     /** 
+          #swagger.tags = ['Auth']
+          #swagger.security = [{
+               "bearerAuth": {}
+          }]
+          #swagger.requestBody = {
+               required: true,
+               schema: {$ref: "#/components/schemas/UpdateProfileRequest"}
+          }
+     */
+)
+router.put("/auth/update-password",[authMiddleware, aclMiddleware([ROLES.MEMBER])],  authController.updatePassword
+     /** 
+          #swagger.tags = ['Auth']
+          #swagger.security = [{
+               "bearerAuth": {}
+          }]
+          #swagger.requestBody = {
+               required: true,
+               schema: {$ref: "#/components/schemas/UpdatePasswordRequest"}
+          }
+     */
+)
 
 // Only for testing middleware based on role
 router.get(
